--- a/src/posts/templates/posts/detail.html
+++ b/src/posts/templates/posts/detail.html
@@ -7,7 +7,8 @@
     <h1>{{ post.title }} <small>{{ post.publish }}</small></h1>
     {% if post.user.get_full_name %}<p>Author: {{ post.user.get_full_name }}</p>{% endif %}
     <div class="col-sm-12 content-markdown">
-    {{ post.content }}
+<!-- prevent the unnecessary spaces in front of the actual text -->
+{{ post.content }}
     </div>
 <div>
 {% endblock contain %}
