--- a/src/project/templates/base.html
+++ b/src/project/templates/base.html
@@ -30,7 +30,7 @@
         <script type="text/javascript">
             $(document).ready(function() {
                 $(".content-markdown").each(function(){
-                    var content = $(this).text().trim();
+                    var content = $(this).text();
                     var markedContent = marked(content);
                     $(this).html(markedContent);
                 });
