--- a/src/posts/templates/posts/list.html
+++ b/src/posts/templates/posts/list.html
@@ -20,7 +20,7 @@
                             <small>{{ post.publish }}</small>
                         </h3>
                         {% if post.user.get_full_name %}<p>Author: {{ post.user.get_full_name }}</p>{% endif %}
-                        <p>{{ post.content | linebreaks | truncatechars:120 }}</p>
+                        <p class="content-markdown">{{ post.content | truncatechars:120 }}</p>
                         <p><a href="{{ post.get_abs_url }}" class="btn btn-primary" role="button">View</a></p>
                     </div>
                 </div>
