implemeted responsive image into markdown content

--- a/src/project/templates/base.html
+++ b/src/project/templates/base.html
@@ -34,6 +34,9 @@
                     var markedContent = marked(content);
                     $(this).html(markedContent);
                 });
+                $(".content-markdown img").each(function(){
+                    $(this).addClass("img-responsive");
+                });
             })
         </script>
     </body>
