--- a/src/posts/templates/posts/detail.html
+++ b/src/posts/templates/posts/detail.html
@@ -6,9 +6,8 @@
     {% endif %}
     <h1>{{ post.title }} <small>{{ post.publish }}</small></h1>
     {% if post.user.get_full_name %}<p>Author: {{ post.user.get_full_name }}</p>{% endif %}
-    <div class="col-sm-12 content-markdown">
-<!-- prevent the unnecessary spaces in front of the actual text -->
-{{ post.content }}
+    <div class="col-sm-12 content-item">
+        {{ post.get_markdown }}
     </div>
 <div>
 {% endblock contain %}
