--- a/src/project/templates/base.html
+++ b/src/project/templates/base.html
@@ -34,7 +34,7 @@
                     var markedContent = marked(content);
                     $(this).html(markedContent);
                 });
-                $(".content-markdown img").each(function(){
+                $(".content-item img").each(function(){
                     $(this).addClass("img-responsive");
                 });
             })
