--- a/src/posts/templates/posts/form.html
+++ b/src/posts/templates/posts/form.html
@@ -3,7 +3,15 @@
 {{ form.media }}
 {% endblock head_extra %}
 {% block contain %}
-<div class="col-sm-8 col-sm-offset-2">
+<div class="col-sm-6">
+<h1>Preview</h1>
+<div class="content-preview">
+    <img id="preview-top-img"/>
+    <h3 id="preview-title"></h3>
+    <p id="preview-content"></p>
+</div>
+</div>
+<div class="col-sm-6">
 <h1>Form</h1>
 <form method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
@@ -12,3 +20,31 @@
 </form>
 </div>
 {% endblock contain %}
+{% block js_extra %}
+<script type="text/javascript">
+    function setContent(value) {
+        var marked_value = $(marked(value));
+        marked_value.find("img").map(function() {
+            $(this).addClass("img-responsive");
+        })
+        $("#preview-content").html(marked_value);
+    }
+    $(document).ready(function() {
+        var title_val = $("#id_title").val();
+        var content_val = $("#id_content").val();
+        if (title_val) {
+             $("#preview-title").text(title_val);
+        }
+        if (content_val) {
+            setContent(content_val);
+        }
+        $("#id_title").on('input', function() {
+            $("#preview-title").text($(this).val());
+        });
+        $("#id_content").keyup(function() {
+            setContent($(this).val());
+        });
+        
+    })
+</script>
+{% endblock js_extra %}
