implemented django crispy form

--- a/src/project/static/css/project.css
+++ b/src/project/static/css/project.css
@@ -8,6 +8,10 @@ html, body {
     align-items:center;
 }
 
+.wmd-panel {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
 
 /* CUSTOMIZE RESPONSIVE */
 @media only screen 
