--- a/src/posts/templates/posts/form.html
+++ b/src/posts/templates/posts/form.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 {% block head_extra %}
 {{ form.media }}
 {% endblock head_extra %}
+
 {% block contain %}
 <div class="col-sm-6">
 <h1>Preview</h1>
@@ -13,9 +16,9 @@
 </div>
 <div class="col-sm-6">
 <h1>Form</h1>
-<form method="POST" action="" enctype="multipart/form-data">
+<form method="POST" action="" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" class="btn btn-default" value="create post"/>
 </form>
 </div>
