--- a/src/posts/templates/posts/list.html
+++ b/src/posts/templates/posts/list.html
@@ -1,11 +1,22 @@
 {% extends "base.html" %}
+{% block head_extra %}
+<style type="text/css">
+    .search-form {
+        margin-bottom: 1rem;
+    }
+</style>
+{% endblock head_extra%}
 {% block contain %}
 <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-sm-6 col-sm-offset-3">
         <h1>{{ title }} is working!</h1>
-        <form method="GET" action="">
-            <input type="text" name="q" placeholder="Search post..."/>
-            <input type="submit" class="btn btn-primary" value="search"/>
+        <form method="GET" action="" class="search-form">
+            <div class="input-group">
+                <input class="form-control" type="text" name="q" placeholder="Search post..."/>
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+                </span>
+            </div>
         </form>
         {% for post in posts %}
         <div class="row">
