--- a/src/project/templates/base.html
+++ b/src/project/templates/base.html
@@ -12,6 +12,7 @@
 
         {# Base stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/github.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/project.css' %}">
         {% block head_extra %}{% endblock head_extra %}
